<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Restaurant Finder</string>
    <string name="loginButton">Login</string>
    <string name="registerLabel">Not a member? Register Here!</string>
    <string name="passwordLabel">Password:</string>
    <string name="emailLabel">Email:</string>
    <string name="logo_description">Logo</string>
    <string name="title_activity_register">Register</string>
    <string name="loginLabel">Already a member? Login Here!</string>
    <string name="registerButton">Register</string>
    <string name="fullnameLabel">Name:</string>
    <string name="title_activity_placeholder">Placeholder</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_restaurant_details">Restaurant Details</string>
    <string name="title_activity_start">Select an Option</string>
    <string name="start">Are you?</string>
    <string name="restaurant">A Restaurant Owner</string>
    <string name="user">Looking for a Restaurant</string>
    <string name="or">or</string>
    <string name="title_activity_admin">Admin</string>
    <string name="search">Search</string>
    <string name="viewRestaurants">View Restaurants</string>
    <string name="addRestaurant">Add Restaurant</string>
    <string name="title_activity_add_restaurant">Add Restaurant</string>
    <string name="title_activity_view_restaurant">View Restaurants</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="restaurantType">Type</string>
    <string name="restaurantBio">Bio</string>
    <string name="createRestaurantButton">Create Restaurant</string>
    <string name="createDealButton">Create Deal</string>
    <string name="restaurantAddress1">Address Line 1</string>
    <string name="restaurantAddress2">Address Line 2</string>
    <string name="restaurantAddress3">Address Line 3</string>
    <string name="restaurantContactNum">Phone Number</string>
    <string name="restaurantEmail">Email</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_deal_details">Deal Details</string>
    <string name="title_manage_activity_deal_details">Manage Deal Details</string>
    <string name="btnMenu">View Menu</string>
    <string name="btnMap">View Map</string>
    <string name="btnDeals">View Deals</string>
    <string name="btnFav">Add to Favourites</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Delete</string>
    <string name="btnManageDeals">Manage Deals</string>
    <string name="btnManageMenu">Manage Menu</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_deals_by_rest">Deals</string>
    <string name="title_manage_activity_deals_by_rest">Manage Deals</string>
    <string name="title_activity_deals_list">Deals</string>
    <string name="location">Location</string>
    <string name="title_activity_manage">Manage Restaurant</string>
    <string name="title_activity_edit_restaurant">Edit Restaurant</string>
    <string name="noSavedFav">No Restaurant saved</string>
    <string name="menuUrl">Menu URL</string>
    <string name="buttonAddDeal">Add Deal</string>
    <string name="noRestTV">No Restaurants, Please add one..</string>
    <string name="title_activity_add_deal">Add Deal</string>
    <string name="title_activity_edit_deal">Edit Deal</string>
    <string name="dealName">Deal Name</string>
    <string name="dealDescription">Description</string>
	<string name="price">Price</string>
</resources>