<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddRestaurantActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3b3b3b" >

        <!-- Header Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/header"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="#3b3b3b"
            android:orientation="vertical" >

            <!-- Rest Name Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/restaurantName"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <!-- Input Rest Name -->

            <EditText
                android:id="@+id/inputName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:background="#E7E7E7"
                android:textCursorDrawable="@null"
                android:inputType="text"
                android:singleLine="true" />

            <!-- Type Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/restaurantType"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <!-- Input type -->

            <EditText
                android:id="@+id/inputType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:textCursorDrawable="@null"
                android:background="#E7E7E7"
                android:inputType="text"
                android:singleLine="true" />

            <!-- Bio Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/restaurantBio"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <!-- Input bio -->

            <EditText
                android:id="@+id/inputBio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="5dip"
                android:textCursorDrawable="@null"
                android:background="#E7E7E7"
                android:gravity="top"
                android:inputType="text"
                android:lines="4" />
            
            <!-- Address1 Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/restaurantAddress1"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <!-- Input Address1 -->

            <EditText
                android:id="@+id/inputAddress1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textCursorDrawable="@null"
                android:layout_marginBottom="15dip"
                android:background="#E7E7E7"
                android:inputType="text"
                android:singleLine="true" />
            
            <!-- Address2 Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/restaurantAddress2"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <!-- Input Address2 -->

            <EditText
                android:id="@+id/inputAddress2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textCursorDrawable="@null"
                android:layout_marginBottom="15dip"
                android:background="#E7E7E7"
                android:inputType="text"
                android:singleLine="true" />
            
            <!-- Address3 Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/restaurantAddress3"
                
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <!-- Input Address3 -->

            <EditText
                android:id="@+id/inputAddress3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:background="#E7E7E7"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:singleLine="true" />
            
            <!-- ContactNum Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/restaurantContactNum"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <!-- Input ContactNum -->

            <EditText
                android:id="@+id/inputContactNum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textCursorDrawable="@null"
                android:layout_marginBottom="15dip"
                android:background="#E7E7E7"
                android:inputType="phone"
                android:singleLine="true" />
            
            <!-- Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/restaurantEmail"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <!-- Input email -->

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textCursorDrawable="@null"
                android:layout_marginBottom="15dip"
                android:background="#E7E7E7"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            
            <!-- menu url Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/menuUrl"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <!-- Input email -->

            <EditText
                android:id="@+id/inputMenuUrl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textCursorDrawable="@null"
                android:layout_marginBottom="15dip"
                android:background="#E7E7E7"
                android:inputType="textUri"
                android:singleLine="true" />

            

            <!-- Button Create Product -->

            <Button
                android:id="@+id/btnCreateRestaurant"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:background="#009f00"
                android:text="@string/createRestaurantButton"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>