<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#3b3b3b"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <!-- Header Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Login Form -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/emailLabel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dip"
                android:layout_marginTop="5dip"
                android:layout_weight="1"
                android:background="#E7E7E7"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textCursorDrawable="@null" />
            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/passwordLabel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dip"
                android:layout_weight="1"
                android:background="#E7E7E7"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textCursorDrawable="@null" />

            <!-- Error message -->

            <TextView
                android:id="@+id/login_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:padding="10dip"
                android:textColor="#e30000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Login button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:background="#009f00"
                android:text="@string/loginButton"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <!-- Link to Registration Screen -->

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:layout_marginTop="30dip"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/registerLabel"
                android:textColor="#009f00"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>

</ScrollView>