<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AdminActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#3b3b3b"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <!-- Header Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >
            
            <Button
                android:id="@+id/btnViewRestaurants"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dip"
                android:layout_weight="1"
                android:background="#009f00"
                android:text="@string/viewRestaurants"
                android:textColor="#ffffff"
                android:textStyle="bold" />
            
            <Button
                android:id="@+id/btnAddRestaurants"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:background="#009f00"
                android:text="@string/addRestaurant"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>